--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,6 +1,5 @@
 .TodoApp {
-    width: 980px;
-    background-color: rgb(118, 3, 141);
+    background-color: #F5F5F5;
     color: #222;
     display: flex;
     flex-direction: column;
@@ -8,5 +7,6 @@
     justify-content: center;
     align-items: center;
     align-content: center;
+    width: 100vw;
     height: 100vh;
 }
